--- a/rock-paper-scissors/rock-paper-scissors.ipynb
+++ b/rock-paper-scissors/rock-paper-scissors.ipynb
@@ -25,52 +25,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Introduzca el numero correspondiente a la opcion que desea:\n",
+      "1.Stone\n",
+      "2.Paper\n",
+      "3.Scissors\n",
+      "1\n",
+      "Maquina: stone Jugador: stone\n",
+      "Empate\n",
+      "Puntos Jugador: 0 Puntos maquina: 0 \n",
+      "\n",
+      "Introduzca el numero correspondiente a la opcion que desea:\n",
+      "1.Stone\n",
+      "2.Paper\n",
+      "3.Scissors\n",
+      "2\n",
+      "Maquina: stone Jugador: paper\n",
+      "Jugador gana\n",
+      "Puntos Jugador: 1 Puntos maquina: 0 \n",
+      "\n",
+      "Introduzca el numero correspondiente a la opcion que desea:\n",
+      "1.Stone\n",
+      "2.Paper\n",
+      "3.Scissors\n",
+      "3\n",
+      "Maquina: scissors Jugador: scissors\n",
+      "Empate\n",
+      "Puntos Jugador: 1 Puntos maquina: 0 \n",
+      "\n",
+      "Introduzca el numero correspondiente a la opcion que desea:\n",
+      "1.Stone\n",
+      "2.Paper\n",
+      "3.Scissors\n",
+      "4\n",
+      "Comando incorrecto\n",
+      "\n",
+      "Introduzca el numero correspondiente a la opcion que desea:\n",
+      "1.Stone\n",
+      "2.Paper\n",
+      "3.Scissors\n",
+      "3\n",
+      "Maquina: paper Jugador: scissors\n",
+      "Jugador gana\n",
+      "Puntos Jugador: 2 Puntos maquina: 0 \n",
+      "\n",
+      "Introduzca el numero correspondiente a la opcion que desea:\n",
+      "1.Stone\n",
+      "2.Paper\n",
+      "3.Scissors\n",
+      "3\n",
+      "Maquina: paper Jugador: scissors\n",
+      "Jugador gana\n",
+      "Puntos Jugador: 3 Puntos maquina: 0 \n",
+      "\n",
+      "Jugador gana la partida!\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
     "# https://stackoverflow.com/questions/306400/how-to-randomly-select-an-item-from-a-list\n",
-    "\n",
+    "import random\n",
     "\n",
     "# Assign to a list the 3 possible options: 'stone', 'paper' or 'scissors'.\n",
-    "\n",
+    "juego = [\"stone\",\"paper\",\"scissors\"]\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
-    "\n",
+    "maximo = 5\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
-    "\n",
+    "victoria = 3\n",
     "\n",
     "# Define a function that randomly returns one of the 3 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
-    "\n",
+    "def jugada_aleatoria(juego):\n",
+    "    return random.choice(juego)\n",
     "\n",
     "# Define a function that asks your choice: 'stone', 'paper' or 'scissors'\n",
     "# you should only allow one of the 3 options. This is defensive programming.\n",
     "# If it is not stone, paper or scissors keep asking until it is.\n",
-    "\n",
-    "\n",
+    "def menu(juego):\n",
+    "    salir = False\n",
+    "    jugada_jugador = \"\"\n",
+    "    while not salir:\n",
+    "        comando = input(\"Introduzca el numero correspondiente a la opcion que desea:\\n1.Stone\\n2.Paper\\n3.Scissors\\n\")\n",
+    "        if comando == \"1\":\n",
+    "            jugada_jugador = juego[0]\n",
+    "            salir = True\n",
+    "        elif comando == \"2\":\n",
+    "            jugada_jugador = juego[1]\n",
+    "            salir = True\n",
+    "        elif comando == \"3\":\n",
+    "            jugada_jugador = juego[2]\n",
+    "            salir = True\n",
+    "        else:\n",
+    "            print(\"Comando incorrecto\\n\")\n",
+    "    return jugada_jugador\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
-    " \n",
+    "def combate(jugada_jugador,jugada_maquina):\n",
+    "        resultado = 0\n",
+    "        if jugada_jugador == \"stone\":\n",
+    "            if jugada_maquina == \"paper\":\n",
+    "                resultado = 1\n",
+    "            elif jugada_maquina == \"scissors\":\n",
+    "                resultado = 2       \n",
+    "        elif jugada_jugador == \"paper\":\n",
+    "            if jugada_maquina == \"stone\":\n",
+    "                resultado = 2\n",
+    "            elif jugada_maquina == \"scissors\":\n",
+    "                resultado = 1\n",
+    "        elif jugada_jugador == \"scissors\":\n",
+    "            if jugada_maquina == \"stone\":\n",
+    "                resultado = 1\n",
+    "            elif jugada_maquina == \"paper\":\n",
+    "                resultado = 2\n",
+    "        return resultado\n",
     "    \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
-    "\n",
+    "def estado_juego(jugada_maquina,jugada_jugador,resultado,puntos_maquina,puntos_jugador):\n",
+    "    print(\"Maquina:\",jugada_maquina,\"Jugador:\",jugada_jugador)\n",
+    "    if resultado == 0:\n",
+    "        print(\"Empate\")\n",
+    "    elif resultado == 1:\n",
+    "        print(\"Maquina gana\")\n",
+    "    else:\n",
+    "        print(\"Jugador gana\")\n",
+    "    print(\"Puntos Jugador:\",puntos_jugador,\"Puntos maquina:\",puntos_maquina,\"\\n\")\n",
     "    \n",
     "# Create two variables that accumulate the wins of each participant\n",
-    "\n",
+    "puntos_jugador = 0\n",
+    "puntos_maquina = 0\n",
     "\n",
     "# Create a loop that iterates while no player reaches the minimum of wins\n",
     "# necessary to win. Inside the loop solves the play of the\n",
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
     "\n",
+    "partidas = 0\n",
+    "\n",
+    "while puntos_jugador < 3 and puntos_maquina < 3 and partidas < maximo:\n",
+    "    jugada_maquina = jugada_aleatoria(juego)\n",
+    "    jugada_jugador = menu(juego)\n",
+    "    resultado = combate(jugada_jugador,jugada_maquina)\n",
     "    \n",
+    "    if resultado == 1:\n",
+    "        puntos_maquina = puntos_maquina +1\n",
+    "        \n",
+    "    elif resultado == 2:\n",
+    "        puntos_jugador = puntos_jugador +1\n",
+    "        \n",
+    "    \n",
+    "    estado_juego(jugada_maquina,jugada_jugador,resultado,puntos_maquina,puntos_jugador)   \n",
+    "    partidas = partidas +1\n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
-    "  "
+    "if puntos_jugador > puntos_maquina:\n",
+    "    print(\"Jugador gana la partida!\")\n",
+    "elif puntos_jugador < puntos_maquina:\n",
+    "    print(\"Maquina gana la partida!\")\n",
+    "else:\n",
+    "    print(\"Empate\")"
    ]
   },
   {
@@ -103,58 +225,225 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Introduzca el numero de partidas que quiere jugar\n",
+      "0\n",
+      "No se pueden jugar 0 partidas\n",
+      "Introduzca el numero de partidas que quiere jugar\n",
+      "0\n",
+      "No se pueden jugar 0 partidas\n",
+      "Introduzca el numero de partidas que quiere jugar\n",
+      "a\n",
+      "No introdujo un numero entero positivo\n",
+      "Introduzca el numero de partidas que quiere jugar\n",
+      "saf\n",
+      "No introdujo un numero entero positivo\n",
+      "Introduzca el numero de partidas que quiere jugar\n",
+      "afd\n",
+      "No introdujo un numero entero positivo\n",
+      "Introduzca el numero de partidas que quiere jugar\n",
+      "5\n",
+      "Introduzca el numero correspondiente a la opcion que desea:\n",
+      "1.Stone\n",
+      "2.Paper\n",
+      "3.Scissors\n",
+      "4.Lizard\n",
+      "5.Spock\n",
+      "1\n",
+      "Maquina: spock Jugador: stone\n",
+      "Maquina gana\n",
+      "Puntos Jugador: 0 Puntos maquina: 1 \n",
+      "\n",
+      "Introduzca el numero correspondiente a la opcion que desea:\n",
+      "1.Stone\n",
+      "2.Paper\n",
+      "3.Scissors\n",
+      "4.Lizard\n",
+      "5.Spock\n",
+      "2\n",
+      "Maquina: stone Jugador: paper\n",
+      "Jugador gana\n",
+      "Puntos Jugador: 1 Puntos maquina: 1 \n",
+      "\n",
+      "Introduzca el numero correspondiente a la opcion que desea:\n",
+      "1.Stone\n",
+      "2.Paper\n",
+      "3.Scissors\n",
+      "4.Lizard\n",
+      "5.Spock\n",
+      "3\n",
+      "Maquina: lizard Jugador: scissors\n",
+      "Jugador gana\n",
+      "Puntos Jugador: 2 Puntos maquina: 1 \n",
+      "\n",
+      "Introduzca el numero correspondiente a la opcion que desea:\n",
+      "1.Stone\n",
+      "2.Paper\n",
+      "3.Scissors\n",
+      "4.Lizard\n",
+      "5.Spock\n",
+      "4\n",
+      "Maquina: paper Jugador: lizard\n",
+      "Jugador gana\n",
+      "Puntos Jugador: 3 Puntos maquina: 1 \n",
+      "\n",
+      "Jugador gana la partida!\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
+    "import random\n",
     "\n",
     "\n",
     "# Define a function that asks for an odd number on the keyboard, until it is not valid\n",
     "# will keep asking\n",
-    "\n",
+    "def get_partidas():\n",
+    "    maximo = 0\n",
+    "    while maximo < 1:\n",
+    "        try:\n",
+    "            \n",
+    "            maximo = int(input(\"Introduzca el numero de partidas que quiere jugar\\n\"))\n",
+    "            if maximo == 0:\n",
+    "                print(\"No se pueden jugar 0 partidas\")\n",
+    "             \n",
+    "        except:\n",
+    "            \n",
+    "            print(\"No introdujo un numero entero positivo\")\n",
+    "        \n",
+    "    return maximo\n",
+    "   \n",
+    "    \n",
     "\n",
     "# Assign a list of 5 possible options.\n",
-    "\n",
+    "juego = [\"stone\",\"paper\",\"scissors\",\"lizard\",\"spock\"]\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
     "# This time the previously defined function is used\n",
-    "\n",
+    "partidas_maximas = get_partidas()\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
-    "\n",
+    "max_victorias = 0\n",
+    "if partidas_maximas%2 == 0:\n",
+    "    max_victorias = partidas_maximas / 2 +1\n",
+    "else:\n",
+    "    max_victorias = partidas_maximas / 2 + 1/2\n",
     "\n",
     "# Define a function that randomly returns one of the 5 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
-    "\n",
+    "def jugada_aleatoria(juego):\n",
+    "    return random.choice(juego)\n",
     "\n",
     "# Define a function that asks your choice between 5\n",
     "# you should only allow one of the 5 options. This is defensive programming.\n",
     "# If it is not valid, keep asking until it is valid.\n",
-    "\n",
+    "def menu(juego):\n",
+    "    salir = False\n",
+    "    jugada_jugador = \"\"\n",
+    "    while not salir:\n",
+    "        comando = input(\"Introduzca el numero correspondiente a la opcion que desea:\\n1.Stone\\n2.Paper\\n3.Scissors\\n4.Lizard\\n5.Spock\\n\")\n",
+    "        if comando == \"1\":\n",
+    "            jugada_jugador = juego[0]\n",
+    "            salir = True\n",
+    "        elif comando == \"2\":\n",
+    "            jugada_jugador = juego[1]\n",
+    "            salir = True\n",
+    "        elif comando == \"3\":\n",
+    "            jugada_jugador = juego[2]\n",
+    "            salir = True\n",
+    "        elif comando == \"4\":\n",
+    "            jugada_jugador = juego[3]\n",
+    "            salir = True\n",
+    "        elif comando == \"5\":\n",
+    "            jugada_jugador = juego[4]\n",
+    "            salir = True\n",
+    "        else:\n",
+    "            print(\"Comando incorrecto\\n\")\n",
+    "    return jugada_jugador\n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
     "# Now there are more options\n",
-    "\n",
+    "def combate(jugada_jugador,jugada_maquina):\n",
+    "        resultado = 0\n",
+    "        if jugada_jugador == \"stone\":\n",
+    "            if jugada_maquina == \"paper\" or jugada_maquina == \"spock\":\n",
+    "                resultado = 1\n",
+    "            elif jugada_maquina == \"scissors\" or jugada_maquina == \"lizard\":\n",
+    "                resultado = 2       \n",
+    "        elif jugada_jugador == \"paper\":\n",
+    "            if jugada_maquina == \"stone\" or jugada_maquina == \"spock\":\n",
+    "                resultado = 2\n",
+    "            elif jugada_maquina == \"scissors\" or jugada_maquina == \"lizard\":\n",
+    "                resultado = 1\n",
+    "        elif jugada_jugador == \"scissors\":\n",
+    "            if jugada_maquina == \"stone\" or jugada_maquina==\"spock\":\n",
+    "                resultado = 1\n",
+    "            elif jugada_maquina == \"paper\" or jugada_maquina==\"lizard\":\n",
+    "                resultado = 2\n",
+    "        elif jugada_jugador == \"lizard\":\n",
+    "            if jugada_maquina == \"scissors\" or jugada_maquina==\"stone\":\n",
+    "                resultado = 1\n",
+    "            elif jugada_maquina == \"spock\" or jugada_maquina==\"paper\":\n",
+    "                resultado = 2\n",
+    "        elif jugada_jugador == \"spock\":\n",
+    "            if jugada_maquina == \"lizard\" or jugada_maquina==\"paper\":\n",
+    "                resultado = 1\n",
+    "            elif jugada_maquina == \"stone\" or jugada_maquina==\"scissors\":\n",
+    "                resultado = 2\n",
+    "        return resultado\n",
     "\n",
     "    \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
-    "\n",
+    "def estado_juego(jugada_maquina,jugada_jugador,resultado,puntos_maquina,puntos_jugador):\n",
+    "    print(\"Maquina:\",jugada_maquina,\"Jugador:\",jugada_jugador)\n",
+    "    if resultado == 0:\n",
+    "        print(\"Empate\")\n",
+    "    elif resultado == 1:\n",
+    "        print(\"Maquina gana\")\n",
+    "    else:\n",
+    "        print(\"Jugador gana\")\n",
+    "    print(\"Puntos Jugador:\",puntos_jugador,\"Puntos maquina:\",puntos_maquina,\"\\n\")\n",
     "    \n",
     "# Create two variables that accumulate the wins of each participant\n",
-    "\n",
+    "puntos_jugador = 0\n",
+    "puntos_maquina = 0\n",
     "\n",
     "# Create a loop that iterates while no player reaches the minimum of wins\n",
     "# necessary to win. Inside the loop solves the play of the\n",
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
+    "partidas = 0\n",
+    "while puntos_jugador < max_victorias and puntos_maquina < max_victorias and partidas < partidas_maximas:\n",
+    "    jugada_maquina = jugada_aleatoria(juego)\n",
+    "    jugada_jugador = menu(juego)\n",
+    "    resultado = combate(jugada_jugador,jugada_maquina)\n",
     "    \n",
+    "    if resultado == 1:\n",
+    "        puntos_maquina = puntos_maquina +1\n",
+    "        \n",
+    "    elif resultado == 2:\n",
+    "        puntos_jugador = puntos_jugador +1\n",
+    "        \n",
+    "    \n",
+    "    estado_juego(jugada_maquina,jugada_jugador,resultado,puntos_maquina,puntos_jugador)   \n",
+    "    partidas = partidas +1\n",
     "    \n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
-    "\n"
+    "if puntos_jugador > puntos_maquina:\n",
+    "    print(\"Jugador gana la partida!\")\n",
+    "elif puntos_jugador < puntos_maquina:\n",
+    "    print(\"Maquina gana la partida!\")\n",
+    "else:\n",
+    "    print(\"Empate\")\n"
    ]
   },
   {
@@ -163,6 +452,13 @@
    "source": [
     "**Expected output**: Depends on the inputs, you know how to play and what to expect. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -188,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
