--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -20,19 +20,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days = 11\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
-    "\n",
+    "well_height = 125\n",
+    "daily_advance = 30\n",
+    "night_retreat = 20\n",
+    "accumulated_distance = 0\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
     "\n",
+    "days_escape = 0\n",
     "\n",
     "# Write the code that solves the problem\n",
     "\n",
+    "while(accumulated_distance < well_height):\n",
+    "    days_escape += 1\n",
+    "    accumulated_distance = accumulated_distance + daily_advance\n",
+    "    if (accumulated_distance < well_height):\n",
+    "        accumulated_distance = accumulated_distance - night_retreat\n",
+    "    else: break\n",
+    "print(\"Days =\", days_escape)\n",
     "\n",
     "# Print the result with print('Days =', days)\n"
    ]
@@ -79,18 +98,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days = 5\n",
+      "Average speed is  21.0\n",
+      "Standard deviation is  21.737065119284157\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
     "\n",
+    "import statistics\n",
+    "well_height = 125\n",
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "night_retreat = 20\n",
+    "accumulated_distance = 0\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
+    "days_escape = 0\n",
     "\n",
     "\n",
     "# Write the code that solves the problem\n",
+    "for i in range(len(advance_cm)):\n",
+    "    days_escape += 1\n",
+    "    accumulated_distance = accumulated_distance + advance_cm[i]\n",
+    "    if (accumulated_distance < well_height):\n",
+    "        accumulated_distance = accumulated_distance - night_retreat\n",
+    "    else: break\n",
+    "\n",
+    "print(\"Days =\", days_escape)\n",
+    "\n",
+    "daily_speed= []\n",
+    "for j in range(days_escape):\n",
+    "    daily_speed.append(advance_cm[j] - night_retreat)\n",
+    "    \n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -109,11 +158,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77\n",
+      "12\n"
+     ]
+    }
+   ],
    "source": [
-    "# What is its maximum displacement in a day? And its minimum?\n"
+    "# What is its maximum displacement in a day? And its minimum?\n",
+    "print(max(advance_cm))\n",
+    "print(min(advance_cm))"
    ]
   },
   {
@@ -128,11 +188,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average speed is  38.09090909090909\n"
+     ]
+    }
+   ],
    "source": [
-    "# What is its average progress?\n"
+    "# What is its average progress?\n",
+    "average_speed = sum(advance_cm) / len(advance_cm)\n",
+    "print(\"Average speed is \", average_speed)"
    ]
   },
   {
@@ -147,11 +217,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Standard deviation is  17.159437082600803\n"
+     ]
+    }
+   ],
    "source": [
-    "# What is the standard deviation of your displacement during the day?\n"
+    "# What is the standard deviation of your displacement during the day?\n",
+    "print(\"Standard deviation is \", statistics.pstdev(advance_cm))"
    ]
   },
   {
@@ -181,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
