--- a/robin-hood/robin-hood.ipynb
+++ b/robin-hood/robin-hood.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,12 +53,12 @@
     "points = [(4, 5), (-0, 2), (4, 7), (1, -3), (3, -2), (4, 5),\n",
     "          (3, 2), (5, 7), (-5, 7), (2, 2), (-4, 5), (0, -2),\n",
     "          (-4, 7), (-1, 3), (-3, 2), (-4, -5), (-3, 2),\n",
-    "          (5, 7), (5, 7), (2, 2), (9, 9), (-8, -9)]"
+    "          (5, 7), (5, 7), (2, 2), (9, 9), (-8, -9)]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,11 +77,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 6, 2, 2]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2. Calculate how many arrows have fallen in each quadrant.\n"
+    "# 2. Calculate how many arrows have fallen in each quadrant.\n",
+    "quadrant1 = 0\n",
+    "quadrant2 = 0\n",
+    "quadrant3 = 0\n",
+    "quadrant4 = 0\n",
+    "\n",
+    "\n",
+    "for i in range(len(points)):\n",
+    "    if (points[i][0] > 0 and points[i][1] > 0):\n",
+    "        quadrant1 += 1\n",
+    "    elif (points[i][0] < 0 and points[i][1] > 0):\n",
+    "        quadrant2 += 1\n",
+    "    elif (points[i][0] < 0 and points[i][1] < 0):\n",
+    "        quadrant3 += 1\n",
+    "    elif (points[i][0] > 0 and points[i][1] < 0):\n",
+    "        quadrant4 += 1\n",
+    "\n",
+    "        \n",
+    "results = [quadrant1, quadrant2, quadrant3, quadrant4]        \n",
+    "\n",
+    "print(results)"
    ]
   },
   {
@@ -96,12 +124,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 2)\n",
+      "2.0\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Find the point closest to the center. Calculate its distance to the center\n",
-    "# Defining a function that calculates the distance to the center can help.\n"
+    "# Defining a function that calculates the distance to the center can help.\n",
+    "distance_list = []\n",
+    "import math\n",
+    "for i in range(len(points)):\n",
+    "    distance = (math.sqrt(points[i][0]**2 + points[i][1]**2))\n",
+    "    distance_list.append(distance)\n",
+    "    \n",
+    "print(points[distance_list.index(min(distance_list))])\n",
+    "print(min(distance_list))"
    ]
   },
   {
@@ -117,12 +162,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(9, 9), (-8, -9)]\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. If the target has a radius of 9, calculate the number of arrows that \n",
-    "# must be picked up in the forest.\n"
+    "# must be picked up in the forest.\n",
+    "failed_shots = []\n",
+    "\n",
+    "for i in range(len(distance_list)):\n",
+    "    if distance_list[i] >= 9:\n",
+    "        failed_shots.append(points[i])\n",
+    "        \n",
+    "print(failed_shots)\n",
+    "print(len(failed_shots))"
    ]
   },
   {
@@ -160,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
