--- a/mission-impossible/mission-impossible.ipynb
+++ b/mission-impossible/mission-impossible.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23, 20, 15, 40, 15]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Show volumes that exceed 10 dBs\n"
+    "# Show volumes that exceed 10 dBs\n",
+    "db_exceeded = [dbs[i] for i in range(len(dbs)) if dbs[i] > 10]\n",
+    "print(db_exceeded)"
    ]
   },
   {
@@ -57,11 +67,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 20, 23, 28, 29]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Show the moments (indexs of the list) in which a volume exceeds 10 dBs\n"
+    "# Show the moments (indexs of the list) in which a volume exceeds 10 dBs\n",
+    "moments_exceeded = [i for i in range(len(dbs)) if dbs[i] > 10]\n",
+    "print(moments_exceeded)"
    ]
   },
   {
@@ -76,12 +96,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(9, 23), (20, 20), (23, 15), (28, 40), (29, 15)]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Combine the last two exercises to show the moments when a \n",
-    "# volume exceeds 10 dBs. HINT: Use the enumerate function\n"
+    "# volume exceeds 10 dBs. HINT: Use the enumerate function\n",
+    "moments_and_db = list(enumerate(dbs))\n",
+    "[moments_and_db[i] for i in range(len(moments_and_db)) if moments_and_db[i][1] > 10]"
    ]
   },
   {
@@ -96,13 +129,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alarm!\n",
+      "Alarm activated in time= 30\n"
+     ]
+    }
+   ],
    "source": [
     "# Ethan is discovered if two consecutive volumes are greater than 10 dB. Is he safe? \n",
     "# HINT: Beware of the extremes, do not have an error of the type\n",
-    "# IndexError: list index out of range\n"
+    "# IndexError: list index out of range\n",
+    "alarm = 0\n",
+    "\n",
+    "for i in range(len(dbs)):\n",
+    "    if alarm == 2:\n",
+    "        print(\"Alarm!\")\n",
+    "        print(\"Alarm activated in time=\", i)\n",
+    "        alarm = 0\n",
+    "    elif dbs[i] > 10:\n",
+    "        alarm += 1\n",
+    "    else:\n",
+    "        alarm = 0\n",
+    "        "
    ]
   },
   {
@@ -140,11 +194,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pre hacking: [0, 1, 0, 0, 0, 0, 1, 0, 1, 23, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 20, 1, 1, 15, 1, 0, 0, 0, 40, 15, 0, 0]\n",
+      "Post hacking: [0, 1, 0, 0, 0, 0, 1, 0, 1, 11, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 20, 1, 1, 15, 1, 0, 0, 0, 22, 15, 0, 0]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "hacked = [dbs[i] - 12 if (dbs[i] > 20 and dbs[i] < 40) else dbs[i] - 18 if dbs[i] > 30 else dbs[i] for i in range(len(dbs))]\n",
+    "print(\"Pre hacking:\", dbs)\n",
+    "print(\"Post hacking:\", hacked)"
    ]
   },
   {
@@ -177,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
