--- a/temperature/temperature.ipynb
+++ b/temperature/temperature.ipynb
@@ -363,20 +363,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[8, 9, 10, 11, 10, 13, 14, 15]\n"
+      "[8, 9, 10, 11, 12, 13, 14, 15]\n"
      ]
     }
    ],
    "source": [
     "# 1. We want the hours (not the temperatures) whose temperature exceeds 70ºC\n",
-    "hours_higher_than_70 = [temperatures_C.index(higher_than_70[i]) for i in range(len(higher_than_70))]\n",
+    "hours_higher_than_70 = [i for i in range(len(temperatures_C)) if temperatures_C[i] >= 70]\n",
     "print(hours_higher_than_70)"
    ]
   },
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -405,14 +405,18 @@
    "source": [
     "# 2. Condition that those hours are more than 4 consecutive and consecutive, not simply the sum of the whole set. Is this condition met?\n",
     "consecutive_hours = 0\n",
-    "for i in range(1, len(hours_higher_than_70)-1):\n",
+    "for i in range(1, len(hours_higher_than_70)):\n",
     "    if consecutive_hours == 4:\n",
     "        print(\"True\")\n",
     "        break\n",
-    "    if hours_higher_than_70[i] - hours_higher_than_70[i-1] == 1:\n",
+    "    elif consecutive_hours == 0 and hours_higher_than_70[i] - hours_higher_than_70[i-1] == 1:\n",
+    "        consecutive_hours += 2\n",
+    "    elif hours_higher_than_70[i] - hours_higher_than_70[i-1] == 1:\n",
     "        consecutive_hours += 1\n",
+    "    elif i == len(hours_higher_than_70)-1 and consecutive_hours != 4:\n",
+    "        print(\"False\")\n",
     "    else:\n",
-    "        consecutive_hours += 1\n"
+    "        consecutive_hours = 0\n"
    ]
   },
   {
@@ -427,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
