adding temperatures  soulution

--- a/temperature/temperature.ipynb
+++ b/temperature/temperature.ipynb
@@ -405,18 +405,15 @@
    "source": [
     "# 2. Condition that those hours are more than 4 consecutive and consecutive, not simply the sum of the whole set. Is this condition met?\n",
     "consecutive_hours = 0\n",
-    "for i in range(1, len(hours_higher_than_70)):\n",
-    "    if consecutive_hours == 4:\n",
-    "        print(\"True\")\n",
-    "        break\n",
-    "    elif consecutive_hours == 0 and hours_higher_than_70[i] - hours_higher_than_70[i-1] == 1:\n",
-    "        consecutive_hours += 2\n",
-    "    elif hours_higher_than_70[i] - hours_higher_than_70[i-1] == 1:\n",
-    "        consecutive_hours += 1\n",
-    "    elif i == len(hours_higher_than_70)-1 and consecutive_hours != 4:\n",
-    "        print(\"False\")\n",
-    "    else:\n",
-    "        consecutive_hours = 0\n"
+    "def consecutivas(horas):\n",
+    "    counter=0\n",
+    "    for x in range(len(horas)-1):\n",
+    "        if horas[x]+1 == horas[x+1]:\n",
+    "            counter+=1\n",
+    "            if counter > 2:\n",
+    "                return True\n",
+    "        else:\n",
+    "            counter = 0\n"
    ]
   },
   {
