adding solutions to lyrics, rock-papper-scissors and tempereature

--- a/rock-paper-scissors/rock-paper-scissors.ipynb
+++ b/rock-paper-scissors/rock-paper-scissors.ipynb
@@ -25,41 +25,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Choose! stone, paper or scissors: stone\n",
+      "This was round 1. Machine chose paper, human chose stone. Machine won!\n",
+      "Current result: Machine: 1 Human: 0\n",
+      "Choose! stone, paper or scissors: paper\n",
+      "This was round 2. Machine chose paper, human chose paper. Tie!\n",
+      "Current result: Machine: 2 Human: 1\n",
+      "Choose! stone, paper or scissors: scissors\n",
+      "This was round 3. Machine chose stone, human chose scissors. Machine won!\n",
+      "Current result: Machine: 3 Human: 1\n",
+      "Game ended! Machine won!\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
     "# https://stackoverflow.com/questions/306400/how-to-randomly-select-an-item-from-a-list\n",
-    "\n",
+    "import random\n",
     "\n",
     "# Assign to a list the 3 possible options: 'stone', 'paper' or 'scissors'.\n",
-    "\n",
+    "options = [\"stone\", \"paper\", \"scissors\"]\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
-    "\n",
+    "number_of_games = 5\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
     "\n",
+    "def games(number_of_games):\n",
+    "    if number_of_games % 2 == 0:\n",
+    "        games_to_win = number_of_games / 2 + 1\n",
+    "    else:\n",
+    "        games_to_win = (number_of_games - 1) / 2 + 1\n",
+    "    return games_to_win\n",
+    "\n",
+    "to_win = games(number_of_games)\n",
     "\n",
     "# Define a function that randomly returns one of the 3 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
     "\n",
     "\n",
+    "\n",
+    "def select_option_machine():\n",
+    "    chosen_option_machine = random.choice(options)\n",
+    "    return chosen_option_machine\n",
+    "\n",
     "# Define a function that asks your choice: 'stone', 'paper' or 'scissors'\n",
     "# you should only allow one of the 3 options. This is defensive programming.\n",
     "# If it is not stone, paper or scissors keep asking until it is.\n",
     "\n",
+    "a = \"stone\"\n",
+    "b = \"paper\"\n",
+    "c = \"scissors\"\n",
+    "\n",
+    "results =   [[a, b, b],\n",
+    "            [a, c, a],\n",
+    "            [b, c, c]]\n",
+    "\n",
+    "\n",
+    "def select_option_human():\n",
+    "    chosen_option_human = input(\"Choose! stone, paper or scissors: \")\n",
+    "    while chosen_option_human not in options:\n",
+    "        chosen_option_human = input(\"Wrong input. Please choose between stone, paper or scissors: \")\n",
+    "    return chosen_option_human\n",
+    "\n",
+    "\n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
-    " \n",
-    "    \n",
+    "\n",
+    "winning_result = 0\n",
+    "\n",
+    "def combat():\n",
+    "    x = select_option_machine()\n",
+    "    y = select_option_human()\n",
+    "    if x == y:\n",
+    "            return 0, x, y\n",
+    "    else:\n",
+    "        for i in range(len(results)):\n",
+    "            if (x == results[i][0] or x == results[i][1]) and (y == results[i][0] or y == results[i][1]):\n",
+    "                winning_result = results[i][2]\n",
+    "                if (winning_result == x):\n",
+    "                    return 1, x, y\n",
+    "                else:\n",
+    "                    return 2, x, y\n",
+    "\n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
-    "\n",
-    "    \n",
+    "def game():\n",
+    "    counter_machine = 0\n",
+    "    counter_human = 0\n",
+    "    for i in range(number_of_games):\n",
+    "        game_result = list(combat())\n",
+    "        if (counter_machine != games(number_of_games) and counter_human != games(number_of_games)):\n",
+    "            if game_result[0] == 0:\n",
+    "                message = \"Tie!\"\n",
+    "                counter_machine = counter_machine + 1\n",
+    "                counter_human = counter_human + 1\n",
+    "            elif game_result[0] == 1:\n",
+    "                message = \"Machine won!\"\n",
+    "                counter_machine = counter_machine + 1\n",
+    "            else:\n",
+    "                message = \"Human won!\"\n",
+    "                counter_human = counter_human + 1\n",
+    "            print(\"This was round %d. Machine chose %s, human chose %s. %s\" % (i+1, game_result[1], game_result[2], message))\n",
+    "            print(\"Current result: Machine: %d Human: %d\" % (counter_machine, counter_human))\n",
+    "            if (counter_machine == games(number_of_games) and counter_machine == counter_human):\n",
+    "                print(\"Game ended! This was a Tie!\")\n",
+    "                break\n",
+    "            else:\n",
+    "                if (counter_machine == games(number_of_games) and counter_machine > counter_human):\n",
+    "                    print(\"Game ended! Machine won!\")\n",
+    "                    break\n",
+    "                elif(counter_machine == games(number_of_games) and counter_machine < counter_human):\n",
+    "                    print(\"Game ended! Human won!\")\n",
+    "                    break\n",
+    "game()\n",
     "# Create two variables that accumulate the wins of each participant\n",
     "\n",
     "\n",
@@ -103,43 +191,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Introduce and odd number: 5\n",
+      "Choose! stone, paper, scissors, lizard, spock: paper\n",
+      "This was round 1. Machine chose scissors, human chose paper. Machine won!\n",
+      "Current result: Machine: 1 Human: 0\n",
+      "Choose! stone, paper, scissors, lizard, spock: spock\n",
+      "This was round 2. Machine chose spock, human chose spock. Tie!\n",
+      "Current result: Machine: 2 Human: 1\n",
+      "Choose! stone, paper, scissors, lizard, spock: spock\n",
+      "This was round 3. Machine chose paper, human chose spock. Machine won!\n",
+      "Current result: Machine: 3 Human: 1\n",
+      "Game ended! Machine won!\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
-    "\n",
+    "import random\n",
     "\n",
     "# Define a function that asks for an odd number on the keyboard, until it is not valid\n",
     "# will keep asking\n",
-    "\n",
+    "def odd_number():\n",
+    "    n = int(input(\"Introduce and odd number: \"))\n",
+    "    while(n % 2 == 0):\n",
+    "        n = int(input(\"Wrong input, introduce and odd number: \"))\n",
+    "    return  n\n",
     "\n",
     "# Assign a list of 5 possible options.\n",
-    "\n",
+    "options = [\"stone\", \"paper\", \"scissors\", \"lizard\", \"spock\"]\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
     "# This time the previously defined function is used\n",
-    "\n",
+    "max_number_games = odd_number()\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
     "\n",
+    "def games():\n",
+    "    return (max_number_games - 1) / 2 + 1\n",
+    "\n",
     "\n",
     "# Define a function that randomly returns one of the 5 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
+    "\n",
+    "def select_option_machine():\n",
+    "    return random.choice(options)\n",
     "\n",
     "\n",
     "# Define a function that asks your choice between 5\n",
     "# you should only allow one of the 5 options. This is defensive programming.\n",
     "# If it is not valid, keep asking until it is valid.\n",
     "\n",
+    "def select_option_human():\n",
+    "    chosen_option_human = input(\"Choose! stone, paper, scissors, lizard, spock: \")\n",
+    "    while chosen_option_human not in options:\n",
+    "        chosen_option_human = input(\"Wrong input. Please choose between stone, paper, scissors, lizard, spock: \")\n",
+    "    return chosen_option_human\n",
+    "\n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
     "# Now there are more options\n",
     "\n",
+    "a = \"stone\"\n",
+    "b = \"paper\"\n",
+    "c = \"scissors\"\n",
+    "d = \"lizard\"\n",
+    "e = \"spock\"\n",
     "\n",
-    "    \n",
+    "results =   [[a, b, b],\n",
+    "             [a, c, a],\n",
+    "             [a, d, a],\n",
+    "             [a, e, e],\n",
+    "             [b, c ,c],\n",
+    "             [b, d, d],\n",
+    "             [b, e, b],\n",
+    "             [c, d, c],\n",
+    "             [c, e, e],\n",
+    "             [d, e, e]]\n",
+    "\n",
+    "winning_result = 0\n",
+    "\n",
+    "def combat():\n",
+    "    x = select_option_machine()\n",
+    "    y = select_option_human()\n",
+    "    if x == y:\n",
+    "            return 0, x, y\n",
+    "    else:\n",
+    "        for i in range(len(results)):\n",
+    "            if (x == results[i][0] or x == results[i][1]) and (y == results[i][0] or y == results[i][1]):\n",
+    "                winning_result = results[i][2]\n",
+    "                if (winning_result == x):\n",
+    "                    return 1, x, y\n",
+    "                else:\n",
+    "                    return 2, x, y\n",
+    "\n",
+    "def game():\n",
+    "    counter_machine = 0\n",
+    "    counter_human = 0\n",
+    "    for i in range(max_number_games):\n",
+    "        game_result = list(combat())\n",
+    "        if (counter_machine != games() and counter_human != games()):\n",
+    "            if game_result[0] == 0:\n",
+    "                message = \"Tie!\"\n",
+    "                counter_machine = counter_machine + 1\n",
+    "                counter_human = counter_human + 1\n",
+    "            elif game_result[0] == 1:\n",
+    "                message = \"Machine won!\"\n",
+    "                counter_machine = counter_machine + 1\n",
+    "            else:\n",
+    "                message = \"Human won!\"\n",
+    "                counter_human = counter_human + 1\n",
+    "            print(\"This was round %d. Machine chose %s, human chose %s. %s\" % (i+1, game_result[1], game_result[2], message))\n",
+    "            print(\"Current result: Machine: %d Human: %d\" % (counter_machine, counter_human))\n",
+    "            if (counter_machine == games() and counter_machine == counter_human):\n",
+    "                print(\"Game ended! This was a Tie!\")\n",
+    "                break\n",
+    "            else:\n",
+    "                if (counter_machine == games() and counter_machine > counter_human):\n",
+    "                    print(\"Game ended! Machine won!\")\n",
+    "                    break\n",
+    "                elif(counter_machine == games() and counter_machine < counter_human):\n",
+    "                    print(\"Game ended! Human won!\")\n",
+    "                    break\n",
+    "game()                \n",
+    "                \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
     "\n",
@@ -188,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
