--- a/temperature/temperature.ipynb
+++ b/temperature/temperature.ipynb
@@ -391,20 +391,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# 2. Condition that those hours are more than 4 consecutive and consecutive, not simply the sum of the whole set. Is this condition met?\n",
-    "consecutive_hours = 0\n",
     "def consecutivas(horas):\n",
     "    counter=0\n",
     "    for x in range(len(horas)-1):\n",
@@ -413,7 +415,8 @@
     "            if counter > 2:\n",
     "                return True\n",
     "        else:\n",
-    "            counter = 0\n"
+    "            counter = 0\n",
+    "consecutivas(hours_higher_than_70)"
    ]
   },
   {
@@ -428,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
